# is_fashion_predictable_foundation_models

./: README.md  pyproject.toml
src/is_fashion_predictable_foundation_models/: config.py  main.py  mean_errors_ranking.csv  metrics.py  utils.py
src/is_fashion_predictable_foundation_models/data/: us_female_sneakers.csv
src/is_fashion_predictable_foundation_models/model/: foundation_model.py
src/is_fashion_predictable_foundation_models/model_forecasts/: chronos.csv  chronos_finetuned.csv  flowstate.csv  moirai.csv  timesfm.csv  tirex.csv
