[project]
name = "is_fashion_predictable_foundation_models"
version = "0.1.0"
description = "Reproducible code for the Medium article 'Is Fashion Predictable? The rise of foundation models'"
authors = [{ name = "Etienne DAVID", email = "etienne.david12@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"

# Minimal CPU-compatible dependencies
dependencies = [
    "numpy>=1.23.5,<2",
    "pandas>=2.0.3,<3",
    "scipy>=1.10,<1.14",
    "lightgbm>=4.1,<5",
    "transformers>=4.36,<5",
    "torch>=2.1,<3"
]

[project.optional-dependencies]
# Foundation model
foundation = [
    "chronos-forecasting>=2.1,<3",
    "timesfm @ git+https://github.com/google-research/timesfm.git",
    "uni2ts>=2.0,<3",
    "tirex-ts>=1.3.0,<2",
    "granite-tsfm @ git+https://github.com/ibm-granite/granite-tsfm.git"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/is_fashion_predictable_foundation_models"]